# OCchaptertemplate

./: .gitattributes  .gitignore  LICENSE  README.md  main.tex
chapter/: MyChapter.tex  chapter.json  chaptercitations.bib
matter/: Frontmatter.tex  Postmatter.tex
tools/occonvert/: CLAUDE.md  OCconvert.md  README.md  environment.yml  pyproject.toml
tools/occonvert/occonvert/: __init__.py  bibtex.py  cli.py  converter.py  equations.py  gui.py  images.py  model.py  template.py  utils.py
tools/occonvert/occonvert/formats/: docx.py  markdown.py  pptx.py
tools/occonvert/tests/: test_bibtex.py  test_cli.py  test_docx.py  test_edge_cases.py  test_equations.py  test_images.py  test_markdown.py  test_pptx.py  test_template.py  test_utils.py
tools/occonvert/tests/fixtures/: simple.docx  simple.md  simple.pptx
